corrected more whitespace and 0px errors\

--- a/submissions/ogennaOgbogu/CSS/signupStylesheet.css
+++ b/submissions/ogennaOgbogu/CSS/signupStylesheet.css
@@ -180,7 +180,7 @@ div.contact {
     justify-content: center;
     font-size: 15px;
     
-} 
+}
 
 
 
@@ -248,7 +248,7 @@ div.contact {
     }
     .rightside {
         font-size: 12px;
-        padding: 0 10px 10px 10px;
+        padding: 0 10px 10px;
     }
 
 
@@ -437,7 +437,7 @@ div.contact {
     }
 
     .candc>.contact {
-        padding: 40px 20px 0 20px;
+        padding: 40px 20px 0;
         
     }
 
